force-app/main/default/objects/Contact/fields/Doctor_Rating__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Rating__c</fullName>
    <description>Demo and portal field for ranking doctors by rating.</description>
    <inlineHelpText>Average doctor rating displayed in the patient portal.</inlineHelpText>
    <label>Doctor Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>