force-app/main/default/objects/Contact/fields/Priority_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Priority_Doctor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks a doctor as featured or priority in the patient portal.</description>
    <inlineHelpText>Use this flag to feature priority doctors in portal search results.</inlineHelpText>
    <label>Priority Doctor</label>
    <type>Checkbox</type>
</CustomField>