force-app/main/default/objects/Contact/fields/Review_Count__c.field-meta.xml
<CustomField>
    <fullName>Review_Count__c</fullName>
    <description>Demo and portal field for showing number of patient reviews.</description>
    <inlineHelpText>Total patient reviews shown in the patient portal.</inlineHelpText>
    <label>Review Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>