force-app/main/default/objects/Contact/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <description>Demo and portal field for ranking doctors by total years of experience.</description>
    <inlineHelpText>Total years of doctor experience shown in the patient portal.</inlineHelpText>
    <label>Years of Experience</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>